--- a/htmlsyntax.html
+++ b/htmlsyntax.html
@@ -23,7 +23,7 @@
         </a>
     </p>
 
-    <a  href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREwZx3rOJpdJlaNJjpji55MaX0iz1RlTQnwfT7RIhbVpeMGlboW_g_dUwx68UWNEOjnglF&s=10" target="_blank">   
+    <a  href="https://www.google.com/search?q=sinners&rlz=1C1ONGR_enCA1188CA1188&oq=sin&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGEMYgwEYsQMYgAQYigUyBggCEEUYOzIGCAMQRRg7MgYIBBBFGEAyBggFEEUYOTIGCAYQRRg9MgYIBxBFGD3SAQc5NDhqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8" target="_blank">   
         <!-- href: the URL the link goes to -->
         <!-- target="_blank": opens the link in a new browser tab/window -->
         <!-- rel="noopener noreferrer": improves security and performance when opening a new tab -->
